<resources>
    <string name="app_name">Profile App</string>
    <string name="logout">Logout</string>
    <string name="login">Login</string>
    <string name="signup">Sign Up</string>
    <string name="cancel">Cancel</string>
    <string name="profile">Profile</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="save">Save</string>
    <string name="first_name_hint">First Name</string>
    <string name="last_name_hint">Last Name</string>
    <string name="email_hint">Email</string>
    <string name="age_hint">Age</string>
    <string name="password_hint">Password</string>
    <string name="reEnter_password_hint">Re-enter Password</string>
    <string name="address_hint">Address</string>
    <string name="quantity_hint">1</string>
    <string name="signup_button_text">Sign Up</string>
    <string name="cancel_button_text">Cancel</string>
    <string name="store_item_image">Item Image</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="store">Store</string>
    <string name="nav_header_title">Advance MAD</string>
    <string name="nav_header_subtitle">AdvMobileAppDev@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="cart">Cart</string>
    <string name="order_history">Order History</string>
    <string name="order_date">Order Date</string>
    <string name="order_number">Order Number</string>
    <string name="order_complete">Order Complete!</string>
    <string name="return_to_store">Return to Store</string>
    <string name="item_name">Name of Item</string>
    <string name="item_price">Price of Item</string>
    <string name="item_quantity">Quantity</string>
    <string name="quantity_default">0</string>
    <string name="proceed_checkout">Proceed to Checkout</string>
    <string name="pay">Pay</string>
    <string name="placeholder_text">Placeholder</string>
    <string name="total">Total:</string>
    <string name="product">Product</string>
    <string name="clear_cart">Clear Cart</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="transaction_history">Transaction History</string>
    <string name="transaction_id">Transaction ID</string>
    <string name="masked_card_number">Card</string>
    <string name="transaction_amount">Amount</string>
</resources>